fix: fix z-index burber side menu

--- a/section-1/section-1.css
+++ b/section-1/section-1.css
@@ -60,18 +60,18 @@
 
 @media(max-width:1024px) {
   .welcome__info {
+    position: absolute;
     flex: 1 1 auto;
     z-index: 11;
-    position: absolute;
     background-color: transparent;
   }
 }
 
 @media(max-width:1023px) {
   .welcome__info {
+    position: relative;
     flex: 1 1 auto;
     z-index: 11;
-    position: relative;
     background-color: #030303;
   }
 }
@@ -677,7 +677,6 @@
     justify-content: center;
     width: 100%;
     height: 120px;
-    /* margin: -60px 0 0 0; */
   }
 }
 
@@ -702,7 +701,6 @@
 
 .pannel-swipe__wrap {
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   height: inherit;
 }
@@ -971,4 +969,9 @@
 
 .container-repadding-768 {
   padding: 0 2px 0px 20px;
+}
+
+
+.z-index-lower {
+ z-index: 9;
 }
